# sys-project

./: .gitignore  CMakeLists.txt  Makefile  build.sh  common.h  user.odt
client/: client.c  client.h  fifo.c  fifo.h  headers.h  main.c  sem.c  sem.h  shm.c  shm.h
src/: clients.c  clients.h  cmd_info_proc.c  cmd_info_user.c  cmd_terminate.c  commands.c  commands.h  headers.h  main.c  misc.c  misc.h  perrorcl.c  pipes.c  pipes.h  waitloop.c  waitloop.h
